--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <!-- Images arranged in a grid -->
             <div class="image-grid">
                 <img src="https://media.discordapp.net/attachments/1336501677297111041/1337483351216357416/IMG_1717.jpg?ex=67a8ed70&is=67a79bf0&hm=9969b8aed3637ec640a911046c2baa148e9f393af955e93bf8d16e35d6faac60&=&width=701&height=1247" alt="YOUR BEAUTIFUL">
-                <img src="https://media.discordapp.net/attachments/1326459953359097877/1337536377067274293/IMG_7392.png?ex=67a7cd52&is=67a67bd2&hm=456c86e1ea77bb8a43aa2ff6ed78f41d9f81e667624596adb5adba625af47682&=&width=740&height=1248" alt="NEW IMAGE 1">
-                <img src="https://media.discordapp.net/attachments/1326459953359097877/1337536376463425626/IMG_7393.png?ex=67a7cd52&is=67a67bd2&hm=733e959c845dc68c631df5325240feeb6b6ce81558cceea345637d5d391b8c76&=&width=810&height=1108" alt="NEW IMAGE 2">
+                <img src="https://cdn.discordapp.com/attachments/1326459953359097877/1337536377067274293/IMG_7392.png?ex=67a91ed2&is=67a7cd52&hm=2b174e73ece29f38f45c49fde2395c12ca9d772272d56ecde186484076adf578&" alt="NEW IMAGE 1">
+                <img src="https://cdn.discordapp.com/attachments/1326459953359097877/1337536376463425626/IMG_7393.png?ex=67a91ed2&is=67a7cd52&hm=ad2cb02145a78fb8d2ef90535e89774fca3c956ad19f473367b2618d9268dbda&" alt="NEW IMAGE 2">
                 <!-- Add the new image here -->
                 <img src="https://www.pngkit.com/png/full/0-9657_valentines-day-png-hearts-decor-clipart-picture-valentines.png" alt="NEW IMAGE 3">
             </div>
